src/Grammar/grammar.txt
parser grammar BrainWave;

prog
    : statements EOI
    ;

statements
    : statement (statement)*
    ;

statement
    : block
    | printStatement SEMI
    | readStatement SEMI
    | returnStatement SEMI
    | breakStatement SEMI
    | continueStatement SEMI
    | ifStatement
    | whileStatement
    | untilStatement
    | forStatement
    | funcDefStatement
    | classStatement
    | importStatement SEMI
    | declareStatement SEMI
    | ExprStatement SEMI
    ;

funcDefStatement
    : (kw_STATIC)? kw_FUN IDENTIFIER L_PAREN paramList? R_PAREN ARROW typeExpr statement
    ;

returnStatement
    : kw_RETURN expr
    ;

breakStatement
    : kw_BREAK expr
    ;

continueStatement
    : kw_CONTINUE expr
    ;

paramList
    : declareStatement (COMMA paramList)*
    ;

argList
    : expr (COMMA argList)*
    ;

block
    : L_CURLY statements R_CURLY
    ;

printStatement
    : kw_PRINT expr
    ;

readStatement
    : kw_READ IDENTIFIER
    ;

ifStatement
    : kw_IF boolExpr statement 
    : kw_IF boolExpr statement kw_ELSE statement
    ;

whileStatement
    : kw_WHILE boolExpr statement
    ;

untilStatement
    : kw_UNTIL boolExpr statement
    ;

forStatement
    : kw_FOR L_PAREN declareStatement SEMI boolExpr SEMI assignExpr R_PAREN statement
    ;

classStatement
    : kw_CLASS IDENTIFIER (kw_EXTENDS IDENTIFIER)? L_CURLY classMember* R_CURLY
    | kw_CLASS IDENTIFIER L_CURLY classMember* R_CURLY
    ;

classMember
    : declareStatement
    | funcDefStatement
    | constructorDeclaration
    ;

constructorDeclaration
    : IDENTIFIER L_PAREN arglist? R_PAREN block

importStatement
    : kw_IMPORT STRING_LITERAL
    ;
    
declareStatement
    : (kw_STATIC)? typeExpr (IDENTIFIER | assignExpr)
    ;

exprStatement
    : assignExpr SEMI
    ;

assignExpr
    : logicalExpr ( EQUAL | PLUSEQUAL | MINUSEQUAL ) assignExpr
    | logicalExpr
    ;

logicalExpr
    : boolExpr AND logicalExpr
    | boolExpr OR logicalExpr
    | boolExpr
    ;

boolExpr
    : expr
    | expr (EQ|NEQ|LESS|LEQ|GREATER|GEQ)? expr
    ;

expr
    : termExpr PLUS expr
    | termExpr MINUS expr
    | termExpr
    ;

termExpr
    : factorExpr STAR termExpr
    | factorExpr SLASH termExpr
    | factorExpr PERCENT termExpr
    | factorExpr
    ;

factorExpr
    : unary CARET factorExpr
    | unary
    ;

unary
    : ( BANG | MINUS | MINUSMINUS | PLUSPLUS ) cast
    | cast ( PLUSPLUS | MINUSMINUS )
    | cast
    ;

cast
    : typeExpr L_PAREN logicalExpr R_PAREN
    | memberExpr
    ;

memberExpr
    : grouping ( memberOp )*
    ;

memberOp
    : PERIOD IDENTIFIER ( L_PAREN argList? R_PAREN )?
    ;

grouping
    : L_PAREN logicalExpr R_PAREN
    | baseExpr
    ;

baseExpr
    : funExpr
    | IDENTIFIER
    | INTEGER_LITERAL
    | FLOAT_LITERAL
    | STRING_LITERAL
    ;

funExpr
    : IDENTIFIER L_PAREN argList? R_PAREN
    ;

typeExpr
    : (kw_INT | kw_BOOL | kw_FLOAT | kw_DOUBLE | kw_STRING | kw_VOID )
    | INDENTIFIER LESS typeExpr GREATER
    ;
